# open-engine

./: .gitignore  OPENCLAW_INTEGRATION_STATUS.md  PLAN.md  README.md  plan.md  tasklist.md  telemetry-id
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: integration.yml  rust.yml  typescript.yml
dashboard/: index.html
docs/: API_VERSION.md  DASHBOARD.md  FAILURE_CONTRACT.md  TRANSACTIONS.md  WHY_THIS_EXISTS.md
examples/dashboard/: README.md  package.json  server.js
examples/dashboard/public/: index.html
examples/email-agent/: index.js  package.json
examples/failure-demo/: README.md  demo.js  package.json
examples/web-scraper/: README.md  index.js  package.json
integrations/openclaw/: README.md  adapter.test.ts  adapter.ts  package-lock.json  package.json  vitest.config.ts
state-engine/: Cargo.toml
state-engine/src/: lib.rs  main.rs
state-engine/src/api/: mod.rs  state_rpc.rs
state-engine/src/concurrency/: locks.rs  mod.rs
state-engine/src/models/: channel.rs  goal.rs  memory.rs  mod.rs  session.rs  tool_execution.rs  tool_schema.rs  user.rs
state-engine/src/persistence/: channel_repo.rs  database.rs  goal_repo.rs  memory_repo.rs  migrations.rs  mod.rs  repository.rs  session_repo.rs  tool_execution_repo.rs  tool_schema_repo.rs
tests/auto-key-test/: package.json  test.js
tests/idempotency-stress/: package.json  test.js
tools/cli/: README.md  package.json
ts-client/: package-lock.json  package.json
ts-client/src/: client.ts  index.test.ts  index.ts  types.ts
